# goit-pythonweb-hw-06

./: README.md
assessment/: .env  alembic.ini  main.py  models.py  my_select.py  pyproject.toml  seeds.py
assessment/alembic/: env.py
assessment/alembic/versions/: 41cd7fc8c041_init.py  6a2512d40115_initial_migration.py
